--- a/index.css
+++ b/index.css
@@ -1,306 +1,1 @@
-﻿article,
-main,
-section,
-footer,
-aside,
-header {
-  display: block;
-}
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  background: #cfcf23;
-  font-family: "Pt Mono", monospace;
-  font-size: 1rem;
-  height: 100vh;
-  overflow: hidden;
-}
-header {
-  border-bottom: 1px groove #000;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
-  background: #e7e771;
-}
-nav li {
-  list-style: none;
-  -o-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -ms-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  cursor: pointer;
-  background-color: #e7e771;
-}
-nav li.active {
-  font-weight: bold;
-  -o-transform: scale(1.04);
-  -moz-transform: scale(1.04);
-  -ms-transform: scale(1.04);
-  -webkit-transform: scale(1.04);
-  transform: scale(1.04);
-  background-color: #cfcf23;
-  border-bottom-color: transparent;
-  border-left-color: #000;
-  border-bottom-right-radius: 0;
-}
-nav li:hover {
-  background-color: #e0e045;
-}
-nav {
-  flex-grow: 1;
-}
-nav ul {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
-}
-[data-tab] {
-  border: 1px solid #000;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  border-left-color: transparent;
-  padding: 0.5em;
-  font-family: "Syne Mono", monospace;
-  font-size: 1.2rem;
-}
-[data-tab]:not(:first-child) {
-  margin-left: -8px;
-}
-main {
-  max-width: 900px;
-  width: 90%;
-  height: calc(100% - 55px);
-  margin: 0 auto;
-  position: relative;
-}
-
-main section {
-  position: absolute;
-  top: 0.8em;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow-y: auto;
-  opacity: 0;
-  visibility: hidden;
-  -o-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -ms-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-main section.show {
-  opacity: 1;
-  visibility: visible;
-  position: static;
-  padding-bottom: 1.2em;
-}
-.name {
-  margin: 0.6em;
-}
-.info-box {
-  padding-right: 0.5em;
-}
-.pic-wrapper {
-  width: 120px;
-  border: 7px solid #fff;
-  border-bottom-width: 14px;
-  margin: 1em auto;
-  padding: 0;
-  box-shadow: 1px 3px 10px black;
-  -o-transform: rotate(-10deg);
-  -moz-transform: rotate(-10deg);
-  -ms-transform: rotate(-10deg);
-  -webkit-transform: rotate(-10deg);
-  transform: rotate(-10deg);
-}
-.pic-wrapper img {
-  width: 100%;
-  display: block;
-  -o-filter: grayscale(60%);
-  -moz-filter: grayscale(60%);
-  -ms-filter: grayscale(60%);
-  -webkit-filter: grayscale(60%);
-  filter: grayscale(60%);
-}
-.info-para > p:not(:last-of-type) {
-  margin-bottom: 0.6em;
-}
-.info-para > p {
-  font-size: 1rem;
-}
-footer {
-  background-color: #2f4f4f;
-  color: #fff;
-  text-align: center;
-  z-index: 5000;
-  font-size: 0.7rem;
-  padding: 0.15em 0;
-}
-.projects-title {
-  font-size: 1.5rem;
-  margin: 1em 0;
-  text-align: center;
-}
-.content-ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  height: 100%;
-}
-.content-li {
-  position: relative;
-  flex: 0 0 300px;
-  overflow: hidden;
-}
-.content-link {
-  font-size: 1rem;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-.skills {
-  font-family: monospace;
-  font-size: 1rem;
-}
-
-.source-code {
-  display: inline-block;
-  position: absolute;
-  left: 1em;
-  bottom: -100%;
-  background-color: ghostwhite;
-  color: #000;
-  padding: 0.7em;
-  border-radius: 5px;
-  white-space: nowrap;
-  transition: bottom .4s;
-}
-
-.name,
-.projects-title,
-.contact-section > h1 {
-  font-size: 1.2rem;
-}
-.contact-section {
-  padding: 0.5em 0;
-}
-.contact-section h1 {
-  margin: 0.2em 0 0.7em;
-}
-.contact-section ul li {
-  font-size: 0.8rem;
-  padding: 0.2em;
-  margin: 0.5em 0;
-}
-.contact-section ul li {
-  border-bottom: 1px solid gray;
-}
-@media (min-width: 650px) {
-  [data-tab] {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border-left-color: transparent;
-    padding: 0.8em;
-    font-family: "Syne Mono", monospace;
-    font-size: 1.4em;
-  }
-  [data-tab]:not(:first-child) {
-    margin-left: -4px;
-  }
-  .name,
-  .projects-title,
-  .contact-section > h1 {
-    font-size: 1.8rem;
-  }
-  .pic-wrapper {
-    width: 150px;
-    margin: 2em auto;
-  }
-  .info-para > p {
-    font-size: 1.7rem;
-    line-height: 1.3;
-  }
-  .content-link {
-    font-size: 1.6rem;
-  }
-  .skills {
-    font-size: 1.5rem;
-  }
-  .contact-section ul li {
-    margin: 1.4em;
-    font-size: 1.5rem;
-  }
-}
-@media (min-width: 800px) {
-  .content-li {
-    margin: 0.9em;
-    padding: 1em 0 0 0.2em;
-    min-height: 200px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: #fff;
-    box-shadow: 1px 5px 20px black;
-    border-radius: 10px;
-  }
-
-  .content-li:hover .source-code {
-    bottom: 1em;
-  }
-
-  .content-link {
-    color: #fff;
-  }
-  .content-li:nth-child(1) {
-    background: linear-gradient(
-        to right bottom,
-        rgba(0, 0, 0, 0.85) 40%,
-        rgba(0, 0, 0, 0.2)
-      ),
-      url("./img/fmentor.PNG");
-  }
-  .content-li:nth-child(2) {
-    background: linear-gradient(
-        to right bottom,
-        rgba(0, 0, 0, 0.85) 40%,
-        rgba(0, 0, 0, 0.2)
-      ),
-      url("./img/ÖC.PNG");
-  }
-  .content-li:nth-child(3) {
-    background: linear-gradient(
-        to right bottom,
-        rgba(0, 0, 0, 0.85) 40%,
-        rgba(0, 0, 0, 0.2)
-      ),
-      url("./img/KY.PNG");
-  }
-  .content-li:nth-child(4) {
-    background: linear-gradient(
-        to right bottom,
-        rgba(0, 0, 0, 0.85) 40%,
-        rgba(0, 0, 0, 0.2)
-      ),
-      url("./img/BV.PNG");
-  }
-  .content-li:nth-child(5) {
-    background: linear-gradient(
-        to right bottom,
-        rgba(0, 0, 0, 0.85) 40%,
-        rgba(0, 0, 0, 0.2)
-      ),
-      url("./img/WS.PNG");
-  }
-  .content-li:nth-child(6) {
-    background: linear-gradient(
-        to right bottom,
-        rgba(0, 0, 0, 0.85) 40%,
-        rgba(0, 0, 0, 0.2)
-      ),
-      url("./img/FEB.jpg");
-  }
-} /*# sourceMappingURL=index.css.map */
+﻿*,*::before,*::after{box-sizing:border-box;margin:0;padding:0}ul[role=list],ol[role=list]{list-style:none}html:focus-within{scroll-behavior:smooth}body{min-height:100vh;text-rendering:optimizeSpeed;line-height:1.5}a:not([class]){text-decoration-skip-ink:auto}img,picture{max-width:100%;display:block}input,button,textarea,select{font:inherit}@media(prefers-reduced-motion: reduce){html:focus-within{scroll-behavior:auto}*,*::before,*::after{animation-duration:.01ms !important;animation-iteration-count:1 !important;transition-duration:.01ms !important;scroll-behavior:auto !important}}body{font-family:"Pt Mono",monospace;font-size:1rem}nav li.active{font-weight:bold}[data-tab]{font-family:"Syne Mono",monospace;font-size:1.2rem}@media only screen and (min-width: 650px){[data-tab]{font-size:1.4rem}}.info-para>p{font-size:1rem}@media only screen and (min-width: 650px){.info-para>p{font-size:1.7rem;line-height:1.3}}footer{color:#fff;text-align:center;font-size:.7rem}.projects-title{font-size:1.5rem;text-align:center}.content-link{font-size:1rem;font-family:"Segoe UI",Tahoma,Geneva,Verdana,sans-serif}@media only screen and (min-width: 650px){.content-link{font-size:1.6rem}}@media only screen and (min-width: 800px){.content-link{color:#fff}}.skills{font-family:monospace;font-size:1rem;color:#fff}@media only screen and (min-width: 650px){.skills{font-size:1.5rem}}.source-code{color:#000}.name,.projects-title,.contact-section>h1{font-size:1.2rem}@media only screen and (min-width: 650px){.name,.projects-title,.contact-section>h1{font-size:1.8rem}}.contact-section ul li{font-size:.8rem}@media only screen and (min-width: 650px){.contact-section ul li{font-size:1.5rem}}.container{max-width:1200px;width:90%;margin:0 auto}.sr-only{position:absolute !important;border:0 !important;clip:rect(1px, 1px, 1px, 1px) !important;-webkit-clip-path:inset(50%) !important;clip-path:inset(50%) !important;height:1px !important;width:1px !important;margin:-1px !important;padding:0 !important;overflow:hidden !important;white-space:nowrap !important}.sr-text{position:absolute;left:-999px;width:1px;height:1px;top:auto}.sr-text:focus{position:static;display:inline-block;height:auto;width:auto;margin:auto}nav{flex-grow:1}nav ul{display:flex;justify-content:flex-start;align-items:flex-end}nav ul li{list-style:none;-o-transition:all .3s;-moz-transition:all .3s;-ms-transition:all .3s;-webkit-transition:all .3s;transition:all .3s;cursor:pointer;background-color:#e7e771}nav ul li:hover,nav ul li:active{background-color:#e7e771}nav ul li.active{background-color:#cfcf23;-o-transform:scale(1.04);-moz-transform:scale(1.04);-ms-transform:scale(1.04);-webkit-transform:scale(1.04);transform:scale(1.04);border-bottom-color:transparent;border-left-color:#000;border-bottom-right-radius:0}body{background:#cfcf23;height:100vh;overflow:hidden}header{border-bottom:1px groove #000;display:flex;justify-content:flex-start;align-items:flex-end;background:#e7e771}main{height:calc(100% - 55px);position:relative}main section{position:absolute;top:.8em;left:0;width:100%;height:100%;overflow-y:auto;opacity:0;visibility:hidden;-o-transition:all .3s;-moz-transition:all .3s;-ms-transition:all .3s;-webkit-transition:all .3s;transition:all .3s}main section.show{opacity:1;visibility:visible;position:static;padding-bottom:1.2em}footer{background-color:#2f4f4f;z-index:5000;padding:.15em 0}[data-tab]{border:1px solid #000;border-top-right-radius:10px;border-bottom-right-radius:10px;padding:.5em}@media only screen and (min-width: 650px){[data-tab]{padding:.8em}}[data-tab]:not(:first-child){margin-left:-8px}@media only screen and (min-width: 650px){[data-tab]:not(:first-child){margin-left:-4px}}.name{margin:.6em}.info-box{padding-right:.5em}.pic-wrapper{width:120px;border:7px solid #fff;border-bottom-width:14px;margin:1em auto;padding:0;box-shadow:1px 3px 10px #000;-o-transform:rotate(-10deg);-moz-transform:rotate(-10deg);-ms-transform:rotate(-10deg);-webkit-transform:rotate(-10deg);transform:rotate(-10deg)}@media only screen and (min-width: 650px){.pic-wrapper{width:150px;margin:2em auto}}.pic-wrapper img{-o-filter:grayscale(60%);-moz-filter:grayscale(60%);-ms-filter:grayscale(60%);-webkit-filter:grayscale(60%);filter:grayscale(60%)}.info-para>p:not(:last-of-type){margin-bottom:.6em}.projects-title{margin:1em 0}.content-ul{display:flex;flex-wrap:wrap;justify-content:space-evenly;height:100%}.content-li{position:relative;flex:0 0 300px;overflow:hidden}@media only screen and (min-width: 800px){.content-li{margin:.9em;padding:1em 0 0 .2em;height:250px;background-repeat:no-repeat;background-size:cover;box-shadow:1px 5px 20px #000;border-radius:10px}}@media only screen and (min-width: 800px){.content-li:nth-child(1){background:linear-gradient(to right bottom, rgba(0, 0, 0, 0.85) 40%, rgba(0, 0, 0, 0.2)),url("./img/fmentor.PNG")}}@media only screen and (min-width: 800px){.content-li:nth-child(2){background:linear-gradient(to right bottom, rgba(0, 0, 0, 0.85) 40%, rgba(0, 0, 0, 0.2)),url("./img/ÖC.PNG")}}@media only screen and (min-width: 800px){.content-li:nth-child(3){background:linear-gradient(to right bottom, rgba(0, 0, 0, 0.85) 40%, rgba(0, 0, 0, 0.2)),url("./img/KY.PNG")}}@media only screen and (min-width: 800px){.content-li:nth-child(4){background:linear-gradient(to right bottom, rgba(0, 0, 0, 0.85) 40%, rgba(0, 0, 0, 0.2)),url("./img/BV.PNG")}}@media only screen and (min-width: 800px){.content-li:nth-child(5){background:linear-gradient(to right bottom, rgba(0, 0, 0, 0.85) 40%, rgba(0, 0, 0, 0.2)),url("./img/WS.PNG")}}@media only screen and (min-width: 800px){.content-li:nth-child(6){background:linear-gradient(to right bottom, rgba(0, 0, 0, 0.85) 40%, rgba(0, 0, 0, 0.2)),url("./img/FEB.jpg")}}.source-code{display:inline-block;position:absolute;left:1em;bottom:-100%;background-color:#f8f8ff;padding:.7em;border-radius:5px;white-space:nowrap;transition:bottom .4s,background-color .2s}.source-code:hover{background-color:#cfcf23}.contact-section{padding:.5em 0}.contact-section h1{margin:.2em 0 .7em}.contact-section ul li{padding:.2em;margin:.5em 0}@media only screen and (min-width: 650px){.contact-section ul li{margin:1.4em}}@media(min-width: 800px){.content-li:hover .source-code{bottom:1em}}/*# sourceMappingURL=index.css.map */
