--- a/burak-vet/index.css
+++ b/burak-vet/index.css
@@ -467,9 +467,11 @@ aside {
         z-index: 333;
     }
     .slide-img-wrapper {
+        height: 220px;
         width: 220px;
     }
     .slide-img-wrapper img {
+        height: 100%;
         width: 100%;
         object-fit: cover;
     }
